adding qmd , didn't commit for some reason

--- a/docs/toolik_chlorophyll_summary.qmd
+++ b/docs/toolik_chlorophyll_summary.qmd
@@ -11,6 +11,7 @@ execute:
 library(tidyverse)
 library(janitor)
 library(here)
+library(skimr)
 ```
 
 ### Read in data and fix NA's %\>% (and THENN) clean names
